@@ -9,10 +9,10 @@ public:
     static LevelData* forest;       ///<- Forest map
     static LevelData* ice;          ///<- Ice map
     static LevelData* mountains;    ///<- Mountains map
-    static LevelData* sea;          ///<- Sea map
     static LevelData* beach;        ///<- Beach map
-    static LevelData* swampland;    ///<- Swampland map
     static LevelData* city;         ///<- City map
+    static LevelData* sea;          ///<- Sea map
+    static LevelData* swampland;    ///<- Swampland map
     static LevelData* motorway;     ///<- Motorway map
     static LevelData* forest_trails;///<- Forest trails map
 };
